# cooking-app

./: .gitignore  CODEOWNERS  changes.md  db.bat  db.sh  main.py  package-lock.json  populate.py  populate_fixed.py  readme.md  requirements.txt  triggers.py
back/rust/gateway/: .gitignore  Cargo.toml  config.json
back/rust/gateway/admin_gateway/: Cargo.toml
back/rust/gateway/auth_gateway/: Cargo.toml
back/rust/gateway/common/: Cargo.toml
back/rust/gateway/common/src/context/: config.rs
back/rust/gateway/gateway/: Cargo.toml
back/rust/gateway/gateway/src/: main.rs
back/rust/gateway/gateway/src/endpoints/: mod.rs  test.rs
back/rust/gateway/models/: Cargo.toml
back/rust/gateway/models/src/context/: config.rs
back/rust/gateway/src/: config.rs  graceful_shutdown.rs  main.rs
back/rust/gateway/src/endpoints/: mod.rs
back/rust/gateway/src/endpoints/ai/: chatbot.rs  mod.rs  replace_ingredient.rs  tokenize.rs
back/rust/gateway/src/endpoints/allergen/: delete.rs  get.rs  mod.rs  post.rs
back/rust/gateway/src/endpoints/allergen_manager/: get.rs  mod.rs
back/rust/gateway/src/endpoints/credentials_change_requester/: mod.rs  post.rs
back/rust/gateway/src/endpoints/email/: mod.rs  request.rs  verify.rs
back/rust/gateway/src/endpoints/email_changer/: mod.rs  post.rs  put.rs
back/rust/gateway/src/endpoints/follow_manager/: delete_following.rs  get_follow_count.rs  get_followers.rs  get_following.rs  get_following_count.rs  mod.rs  post_new_follower.rs  put_new_follower.rs
back/rust/gateway/src/endpoints/hash/: get_primary.rs  get_with.rs  mod.rs
back/rust/gateway/src/endpoints/history_manager/: delete.rs  get.rs  mod.rs  put.rs
back/rust/gateway/src/endpoints/image_storage/: get.rs  mod.rs  post.rs  put.rs
back/rust/gateway/src/endpoints/login/: mod.rs  post.rs
back/rust/gateway/src/endpoints/message_history_manager/: delete.rs  get.rs  mod.rs  post.rs  put.rs
back/rust/gateway/src/endpoints/password_changer/: mod.rs  post.rs  put.rs
back/rust/gateway/src/endpoints/profile_data_changer/: mod.rs  patch_data.rs
back/rust/gateway/src/endpoints/rating/: common.rs  delete.rs  delete_rating.rs  get.rs  get_rating.rs  mod.rs  patch.rs  patch_rating.rs  put.rs  put_rating.rs
back/rust/gateway/src/endpoints/rating_manager/: delete.rs  delete_all.rs  delete_recipe_ratings.rs  get.rs  get_all.rs  get_by_author.rs  get_rating_by_id.rs  get_rating_by_recipe_and_author.rs  get_rating_comments.rs  get_recipe_comments.rs  mod.rs  patch.rs  post.rs
back/rust/gateway/src/endpoints/recipe_creator/: mod.rs  post_recipe.rs
back/rust/gateway/src/endpoints/recipe_editor/: mod.rs  patch.rs
back/rust/gateway/src/endpoints/recipe_retriever/: get_recipe.rs  get_recipe_card.rs  mod.rs
back/rust/gateway/src/endpoints/recipe_saver/: delete.rs  get.rs  mod.rs  put.rs
back/rust/gateway/src/endpoints/register/: mod.rs  post.rs
back/rust/gateway/src/endpoints/role_changer/: changer.rs  mod.rs  put.rs
back/rust/gateway/src/endpoints/search/: ai.rs  mod.rs  recipes.rs  (+1 more)
back/rust/gateway/src/middlewares/: auth.rs
back/rust/gateway/src/models/: ai.rs  allergens.rs  credentials_change_requester.rs  email.rs  follow_manager.rs  hash.rs  image_storage.rs  login.rs  message_history.rs  mod.rs  password_changer.rs  patch_profile.rs  rating.rs  recipe.rs  register.rs  role_changer.rs  search.rs  search_history.rs  tags.rs  token_validator.rs  user.rs  username_changer.rs
back/rust/search/: Cargo.toml  Dockerfile
back/rust/search/src/: context.rs  main.rs
back/rust/search/src/endpoints/: common.rs  mod.rs  search_ai.rs  search_general.rs
back/rust/search/src/middlewares/: auth_handler.rs  error_handler.rs
back/rust/search/src/repository/: cooking_app.rs  extended_services.rs  mod.rs
(+705 files in other folders)
