[package]
name = "search_cooking_app"
authors = [
    "Cristian George ANDREI <cristianandrei@gmail.com>",
    "Razvan Ionut MIHAI <razvan.mihai3781@gmail.com>",
    "Alexandru MITREANU <alexmitreanu04@gmail.com>"
]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"]}
anyhow = {version = "1.0.82", default-features = true}
mongodb = {version = "2.8.2", default-features = true }

futures = { version = "0.3.30", default-features = true}
async-trait = { version = "0.1.80", default-features = true}

serde = {version = "1.0.198", features = ["derive"]}
serde_json = {version = "1.0.116", default-features = true}

salvo = { version = "0.67.0", features = ["oapi"]}
reqwest = {version = "0.12.4", features = ["json"]}

tracing-subscriber = {version = "0.3.18", features = ["json"]}
tracing = {version = "0.1.40", default-features = true}

dotenv = {version = "0.15.0", default-features = true}
once_cell = { version = "1.19.0", default-features = true }
chrono = {version = "0.4.38", default-features = true}
bson = {version = "2.10.0", features = ["chrono-0_4"]}
