[package]
name = "gateway"
authors.workspace = true
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
common = { path = "../common"}
models = { path = "../models"}

tokio = { workspace = true }
anyhow = {workspace = true}

salvo = { workspace = true }

tracing-subscriber = { workspace = true}
tracing = { workspace = true}
tracing-core = { workspace = true}