[package]
name = "models"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
serde = { workspace = true }
clap = { workspace = true}
figment = { workspace = true}
anyhow = { workspace = true}
